Adds sails-hook-autoreload to devDependencies and placholders for referral and signup routes

--- a/.sailsrc
+++ b/.sailsrc
@@ -1,5 +1,10 @@
 {
   "generators": {
     "modules": {}
+  },
+  "hooks": {
+    "pubsub": false,
+    "session": false,
+    "sockets": false
   }
 }
