--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "grunt-contrib-watch": "0.5.3",
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.2.4",
+    "hashids": "^1.0.2",
     "include-all": "~0.1.6",
     "rc": "1.0.1",
     "sails": "~0.12.3",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "sails-mysql": "^0.12.1"
   },
   "devDependencies": {
     "sails-hook-autoreload": "^0.13.1"
