--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
     "include-all": "~0.1.6",
     "rc": "1.0.1",
     "sails": "~0.12.3",
-    "sails-disk": "~0.10.9",
     "sails-mysql": "^0.12.1"
   },
   "devDependencies": {
-    "sails-hook-autoreload": "^0.13.1"
+    "barrels": "^1.6.4",
+    "mocha": "^2.4.5",
+    "sails-disk": "~0.10.9",
+    "sails-hook-autoreload": "^0.13.1",
+    "sails-memory": "^0.10.6"
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "NODE_ENV=test node ./node_modules/mocha/bin/mocha test/bootstrap.test.js test/integration/**/*.test.js"
   },
   "main": "app.js",
   "repository": {
