--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "mocha": "^2.4.5",
     "sails-disk": "~0.10.9",
     "sails-hook-autoreload": "^0.13.1",
-    "sails-memory": "^0.10.6"
+    "sails-memory": "^0.10.6",
+    "supertest": "^1.2.0"
   },
   "scripts": {
     "debug": "node debug app.js",
